syntax = "proto3";

package api.sys.service.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/lalifeier/vvgo-mall/api/sys/service/v1;v1";

service Sys {
  rpc CreateDict(CreateDictReq) returns (CreateDictResp);
  rpc UpdateDict(UpdateDictReq) returns (google.protobuf.Empty);
  rpc DeleteDict(DeleteDictReq) returns (google.protobuf.Empty);
  rpc GetDict(GetDictReq) returns (GetDictResp);
  rpc ListDict(ListDictReq) returns (ListDictResp);
  rpc PageListDict(PageListDictReq) returns (PageListDictResp);
}

message Dict {
  int64 id = 1;
  string type = 2;
  string label = 3;
  string value = 4;
  int32 status = 5;
  string remark = 6;
  int32 sort = 7;
  int32 is_default = 8;
}
message CreateDictReq {
  string type = 1;
  string label = 2;
  string value = 3;
  int32 status = 4;
  string remark = 5;
  int32 sort = 6;
  int32 is_default = 7;
}
message CreateDictResp { int64 id = 1; }
message UpdateDictReq {
  int64 id = 1;
  string type = 2;
  string label = 3;
  string value = 4;
  int32 status = 5;
  string remark = 6;
  int32 sort = 7;
  int32 is_default = 8;
}
message DeleteDictReq { int64 id = 1; }
message GetDictReq { int64 id = 1; }
message GetDictResp {
  int64 id = 1;
  string type = 2;
  string label = 3;
  string value = 4;
  int32 status = 5;
  string remark = 6;
  int32 sort = 7;
  int32 is_default = 8;
}
message ListDictReq { string type = 1; }
message ListDictResp { repeated Dict data = 1; }
message PageListDictReq {
  int64 pageNum = 1;
  int64 pageSize = 4;
}
message PageListDictResp {
  int64 totalPages = 1;
  int64 currentPage = 2;
  int64 pageSize = 3;
  repeated Dict data = 4;
}
